Bug 354149 - Gwenview is missing rotation options in the sidebar
Summary: Gwenview is missing rotation options in the sidebar
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: Other (add details in bug description)
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 357771 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-21 02:03 UTC by Clay Weber
Modified: 2017-09-22 15:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Clay Weber 2015-10-21 02:03:24 UTC
Gwenview 15.08.2
Kubuntu 15.10

The buttons for image rotation are missing from the Image Operations section on the left sidebar.
These do not seem to be available via any menu entry as well.
However, as a workaround, one can edit the toolbar and add both buttons there, which perform the expected tasks.

Reproducible: Always

Steps to Reproduce:
1. Run gwenview
2. Browse to an image on your computer
3.It is sideways and you wish to rotate it 90 degrees

Actual Results:  
 There is no button or menu option for this, as it was previously available.

Expected Results:  
Buttons or menu entries available to rotate images 90 degrees to the left or right.

As a workaround, one can edit Gwenview's toolbar and add both rotation buttons there, which perform the task as expected.
Comment 1 Nate Graham 2017-09-08 21:12:30 UTC
That's true, how odd.
Comment 2 Nate Graham 2017-09-08 21:20:58 UTC
*** Bug 357771 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2017-09-08 21:39:01 UTC
Easy fix. Submitted a patch: https://phabricator.kde.org/D7743
Comment 4 Nate Graham 2017-09-22 15:59:16 UTC
Git commit 144f440cb76c887714c06e0a075002a3936f9426 by Nathaniel Graham.
Committed on 22/09/2017 at 15:59.
Pushed by ngraham into branch 'master'.

Always show image rotation buttons in Image Operations sidebar when other operations are available

Summary:

Always show the Rotate Left and Rotate Right operations in the Image Operations sidebar when other edit operations are visible.

Test Plan:
Tested in KDE Neon (dev unstable). Works as expected:

{F3903672}

Reviewers: #kde_applications, aacid, broulik, cfeck, #vdg, jensreuterberg

Reviewed By: broulik

Differential Revision: https://phabricator.kde.org/D7743

M  +1    -2    app/imageopscontextmanageritem.cpp

https://commits.kde.org/gwenview/144f440cb76c887714c06e0a075002a3936f9426