Always show image rotation buttons in Image Operations sidebar when other operations are available

Summary:
BUG: 354149

Always show the Rotate Left and Rotate Right operations in the Image Operations sidebar when other edit operations are visible.

Test Plan:
Tested in KDE Neon (dev unstable). Works as expected:

{F3903672}

Reviewers: #kde_applications, aacid, broulik, cfeck, #vdg, jensreuterberg

Reviewed By: broulik

Differential Revision: https://phabricator.kde.org/D7743